For Debian package builds, set PREFIX to "/usr"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,8 @@ IF (NOT WIN32)
     ELSE (CMAKE_SIZEOF_VOID_P MATCHES "8")
       SET (ARCH "i386")
     ENDIF (CMAKE_SIZEOF_VOID_P MATCHES "8")
+
+  SET(CMAKE_INSTALL_PREFIX "/usr/")
   ENDIF (EXISTS /etc/debian_version)
 endif(NOT WIN32)
 
