--- a/buildwin/NSIS_Unicode/Language files/Langstrings_FRENCH.nsh.in
+++ b/buildwin/NSIS_Unicode/Language files/Langstrings_FRENCH.nsh.in
@@ -29,7 +29,7 @@ LangString Page_Confirm_Title ${LANG_FRENCH} "Prêt pour l'installation"
 LangString Installation_Type ${LANG_FRENCH} "Type d'installation"
 
 #LangString Installation_Directory ${LANG_ENGLISH} "Destination location"
-
+LangString Installation_Directory ${LANG_FRENCH} "Dossier d'installation"
 
 #LangString Type_Reinstall ${LANG_ENGLISH} "Reinstallation"
 LangString Type_Reinstall ${LANG_FRENCH} "Réinstallation"
@@ -44,22 +44,22 @@ LangString Type_Downgrade ${LANG_FRENCH} "Retour version précédente"
 LangString Type_Fresh_Installation ${LANG_FRENCH} "Nouvelle installation"
 
 #LangString Uninstall_Link ${LANG_ENGLISH} "Uninstall @CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@"
-LangString Uninstall_Link ${LANG_FRENCH} "Désinstalle  @CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@"
+LangString Uninstall_Link ${LANG_FRENCH} "Désinstalle @CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@"
 
 #LangString Page_TypeInst_Title_1 ${LANG_ENGLISH} "Already Installed"
 LangString Page_TypeInst_Title_1 ${LANG_FRENCH} "Déjà installée"
 
 #LangString Page_TypeInst_Title_Exists ${LANG_ENGLISH} "Version Already Installed"
-LangString Page_TypeInst_Title_Exists ${LANG_FRENCH} "Version déjà installé"
+LangString Page_TypeInst_Title_Exists ${LANG_FRENCH} "Version déjà installée"
 
 #LangString Page_TypeInst_Subtitle_Exists ${LANG_ENGLISH} "@CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ is already installed."
-LangString Page_TypeInst_Subtitle_Exists ${LANG_FRENCH} "@CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ est déjà installé."
+LangString Page_TypeInst_Subtitle_Exists ${LANG_FRENCH} "@CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ est déjà installée."
 
 #LangString Page_TypeInst_Subtitle_1 ${LANG_ENGLISH} "Found installed version of @CPACK_PACKAGE_NAME@."
-LangString Page_TypeInst_Subtitle_1 ${LANG_FRENCH} "@CPACK_PACKAGE_NAME@ déjà installé."
+LangString Page_TypeInst_Subtitle_1 ${LANG_FRENCH} "Version @CPACK_PACKAGE_NAME@ déjà installée."
 
 #LangString Label_TypeInst_Reinstall_Text ${LANG_ENGLISH} "@CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ is already installed on your system. You can reinstall the version now using the previous settings. If you wish to install the program with different settings, cancel installation and un-install the existing version first. Click Next to continue."
-LangString Label_TypeInst_Reinstall_Text ${LANG_FRENCH} "@CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ est déjà installé. Vous pouvez réinstaller cette version en utilisant les paramètres existants. Si vous voulez changer les paramètres , arrêtez l'installation et commencez par désinstaller la version existante . cliquez 'Suivant' pour continuer."
+LangString Label_TypeInst_Reinstall_Text ${LANG_FRENCH} "@CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ est déjà installé. Vous pouvez réinstaller cette version en utilisant les paramètres existants. Si vous voulez changer les paramètres , arrêtez l'installation et commencez par désinstaller la version existante . Cliquez sur 'Suivant' pour continuer."
 
 #LangString RB_Reinstall_TypeInst_Text ${LANG_ENGLISH} "Reinstall using previous settings"
 LangString RB_Reinstall_TypeInst_Text ${LANG_FRENCH} "Réinstaller avec les paramètres existants"
@@ -69,7 +69,7 @@ LangString RB_Reinstall_TypeInst_Text ${LANG_FRENCH} "Réinstaller avec les para
 LangString RB_Upgrade_TypeInst_Text ${LANG_FRENCH} "Mise à jour @CPACK_PACKAGE_NAME@ avec les paramètres existants (recommandé)"
 
 #LangString Label_TypeInst_Downgrade_Text ${LANG_ENGLISH} "A newer version of @CPACK_PACKAGE_NAME@ is installed on your system. It is not recommended to downgrade to an older version."
-LangString Label_TypeInst_Downgrade_Text ${LANG_FRENCH} "Une version plus récente d'@CPACK_PACKAGE_NAME@ est installée.Le retour à une  ancienne version n'est pas recommandé."
+LangString Label_TypeInst_Downgrade_Text ${LANG_FRENCH} "Une version plus récente d'@CPACK_PACKAGE_NAME@ est installée. Le retour à une ancienne version n'est pas recommandé."
 
 #LangString RB_Downgrade_TypeInst_Text ${LANG_ENGLISH} "Downgrade @CPACK_PACKAGE_NAME@ using previous settings (recommended)"
 LangString RB_Downgrade_TypeInst_Text ${LANG_FRENCH} "Revenir à la version précédente avec les paramètres existants (recommandé)"
@@ -81,7 +81,7 @@ LangString EmptyString ${LANG_FRENCH} ""
 LangString Show_Readme_Text ${LANG_FRENCH} "Montrer le journal d'installation"
 
 #LangString Msg_UAC_Admin_Retry ${LANG_ENGLISH} "This $Inst_Or_Uninst requires admin access!$\r$\nPlease log on as an Administrator and try again."
-LangString Msg_UAC_Admin_Retry ${LANG_FRENCH} "Cette $Inst_Ou_Desinst nécessite un accès administrateur!$\r$\nConnectez vous en tant qu'administrateur puis reéssayez."
+LangString Msg_UAC_Admin_Retry ${LANG_FRENCH} "Cette $Inst_Ou_Desinst nécessite un accès administrateur!$\r$\nConnectez vous en tant qu'administrateur puis ré-essayez."
 
 #LangString Msg_UAC_Admin_Abort ${LANG_ENGLISH} "This $Inst_Or_Uninst requires admin privileges, aborting!"
 LangString Msg_UAC_Admin_Abort ${LANG_FRENCH} "Cette $Inst_Ou_Desinst demande des privilèges administrateur, abandon!"
