Add Russian language files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -303,13 +303,13 @@ GETTEXT_BUILD_MO(${CMAKE_SOURCE_DIR}/po/${PACKAGE_NAME}_es_ES.po es)
 GETTEXT_BUILD_MO(${CMAKE_SOURCE_DIR}/po/${PACKAGE_NAME}_de_DE.po de)
 GETTEXT_BUILD_MO(${CMAKE_SOURCE_DIR}/po/${PACKAGE_NAME}_et_ET.po et)
 GETTEXT_BUILD_MO(${CMAKE_SOURCE_DIR}/po/${PACKAGE_NAME}_pl_PL.po pl)
+GETTEXT_BUILD_MO(${CMAKE_SOURCE_DIR}/po/${PACKAGE_NAME}_ru_RU.po ru)
 
 
 #    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_cs_CZ.po cs)
 #    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_da_DK.po da)
 #    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_it_IT.po it)
 #    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_nl_NL.po nl)
-#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_ru_RU.po ru)
 #    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_sv_SE.po sv)
 #    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_pt_PT.po pt_PT)
 #    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_pt_BR.po pt_BR)
