--- a/buildwin/NSIS_Unicode/Language files/Langstrings_RUSSIAN.nsh.in
+++ b/buildwin/NSIS_Unicode/Language files/Langstrings_RUSSIAN.nsh.in
@@ -1,78 +1,110 @@
 ﻿#LangString Installer ${LANG_ENGLISH} "installer"
+LangString Installer ${LANG_RUSSIAN} "программа установки"
 
 #LangString Uninstaller ${LANG_ENGLISH} "uninstaller"
+LangString Uninstaller ${LANG_RUSSIAN} "программа удаления"
 
 #LangString Installer_Unsupported_Windows_Version ${LANG_ENGLISH} "Your Windows version is not supported (it's too old)!$\r$\nYou need at least Windows XP SP3."
+LangString Installer_Unsupported_Windows_Version ${LANG_RUSSIAN} "Ваша версия Windows слишком старая и не поддерживается.$\r$\nТребуется Windows XP SP3 или более современные системы."
 
 #LangString Installer_Running ${LANG_ENGLISH} "The installer is already running."
+LangString Installer_Running ${LANG_RUSSIAN} "Программа установки уже запущена."
 
 #LangString Uninstaller_Running ${LANG_ENGLISH} "The uninstaller is already running."
+LangString Uninstaller_Running ${LANG_RUSSIAN} "Программа удаления уже запущена."
 
 #LangString LangDialog_Title ${LANG_ENGLISH} "@CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ Installation"
+LangString LangDialog_Title ${LANG_RUSSIAN} "Установка @CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@"
 
 #LangString LangDialog_Text ${LANG_ENGLISH} "Please select a language:"
+LangString LangDialog_Text ${LANG_RUSSIAN} "Выберите язык диалога:"
 
 #LangString CP_INSTTYPE ${LANG_ENGLISH} "Installation type:"
+LangString CP_INSTTYPE ${LANG_RUSSIAN} "Конфигурация программы:"
 
 #LangString Page_Confirm_Title ${LANG_ENGLISH} "Ready to Install"
+LangString Page_Confirm_Title ${LANG_RUSSIAN} "Готово к установке"
 
 #LangString Installation_Type ${LANG_ENGLISH} "Setup type"
+LangString Installation_Type ${LANG_RUSSIAN} "Вид операции"
 
 #LangString Installation_Directory ${LANG_ENGLISH} "Destination location"
+LangString Installation_Directory ${LANG_RUSSIAN} "Размещение программы"
 
 #LangString Type_Reinstall ${LANG_ENGLISH} "Reinstallation"
+LangString Type_Reinstall ${LANG_RUSSIAN} "Повторная установка"
 
 #LangString Type_Upgrade ${LANG_ENGLISH} "Upgrade"
+LangString Type_Upgrade ${LANG_RUSSIAN} "Переход на новую версию"
 
 #LangString Type_Downgrade ${LANG_ENGLISH} "Downgrade"
+LangString Type_Downgrade ${LANG_RUSSIAN} "Переход на старую версию"
 
 #LangString Type_Fresh_Installation ${LANG_ENGLISH} "New installation"
+LangString Type_Fresh_Installation ${LANG_RUSSIAN} "Новая установка"
 
 #LangString Uninstall_Link ${LANG_ENGLISH} "Uninstall @CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@"
+LangString Uninstall_Link ${LANG_RUSSIAN} "Удаление @CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@"
 
 #LangString Page_TypeInst_Title_1 ${LANG_ENGLISH} "Already Installed"
+LangString Page_TypeInst_Title_1 ${LANG_RUSSIAN} "Программа уже установлена"
 
 #LangString Page_TypeInst_Subtitle_1 ${LANG_ENGLISH} "Found installed version of @CPACK_PACKAGE_NAME@."
+LangString Page_TypeInst_Subtitle_1 ${LANG_RUSSIAN} "Обнаружена установленная версия @CPACK_PACKAGE_NAME@."
 
 #LangString Page_TypeInst_Title_Exists ${LANG_ENGLISH} "Version Already Installed"
+LangString Page_TypeInst_Title_Exists ${LANG_RUSSIAN} "Уже установленная версия"
 
 #LangString Page_TypeInst_Subtitle_Exists ${LANG_ENGLISH} "@CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ is already installed."
+LangString Page_TypeInst_Subtitle_Exists ${LANG_RUSSIAN} "Программа @CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ уже установлена."
 
 #LangString Label_TypeInst_Reinstall_Text ${LANG_ENGLISH} "@CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ is already installed on your system. You can reinstall the version now using the previous settings. If you wish to install the program with different settings, cancel installation and un-install the existing version first. Click Next to continue."
+LangString Label_TypeInst_Reinstall_Text ${LANG_RUSSIAN} "Программа @CPACK_PACKAGE_NAME@ @CPACK_PACKAGE_VERSION@ уже установлена на вашем компьютере. Вы можете переустановить эту версию с сохранением имеющейся конфигурации. Чтобы установить программу с новой конфигурацией, отмените текущую установку и затем удалите имеющуюся версию. Нажмите «Далее» для продолжения."
 
 #LangString RB_Reinstall_TypeInst_Text ${LANG_ENGLISH} "Reinstall using previous settings"
-
+LangString RB_Reinstall_TypeInst_Text ${LANG_RUSSIAN} "Переустановить с сохранением конфигурации"
 
 #LangString RB_Upgrade_TypeInst_Text ${LANG_ENGLISH} "Upgrade @CPACK_PACKAGE_NAME@ using previous settings (recommended)"
+LangString RB_Upgrade_TypeInst_Text ${LANG_RUSSIAN} "Обновить @CPACK_PACKAGE_NAME@ с сохранением конфигурации (рекомендуется)"
 
 #LangString Label_TypeInst_Downgrade_Text ${LANG_ENGLISH} "A newer version of @CPACK_PACKAGE_NAME@ is installed on your system. It is not recommended to downgrade to an older version."
+LangString Label_TypeInst_Downgrade_Text ${LANG_RUSSIAN} "Более новая версия @CPACK_PACKAGE_NAME@ уже установлена. Переходить на старую версию не рекомендуется."
 
 #LangString RB_Downgrade_TypeInst_Text ${LANG_ENGLISH} "Downgrade @CPACK_PACKAGE_NAME@ using previous settings (recommended)"
+LangString RB_Downgrade_TypeInst_Text ${LANG_RUSSIAN} "Перейти на старую версию @CPACK_PACKAGE_NAME@ с сохранением настроек (обычно не рекомендуется)"
 
 #LangString EmptyString ${LANG_ENGLISH} ""
+LangString EmptyString ${LANG_RUSSIAN} ""
 
 #LangString Show_Readme_Text ${LANG_ENGLISH} "Show Install Log file"
+LangString Show_Readme_Text ${LANG_RUSSIAN} "Показать журнал установки"
 
 #LangString Msg_UAC_Admin_Retry ${LANG_ENGLISH} "This $Inst_Or_Uninst requires admin access!$\r$\nPlease log on as an Administrator and try again."
+LangString Msg_UAC_Admin_Retry ${LANG_RUSSIAN} "Эта $Inst_Or_Uninst нуждается в правах администратора.$\r$\nВойдите в систему как Администратор и повторите попытку."
 
 #LangString Msg_UAC_Admin_Abort ${LANG_ENGLISH} "This $Inst_Or_Uninst requires admin privileges, aborting!"
+LangString Msg_UAC_Admin_Abort ${LANG_RUSSIAN} "Эта $Inst_Or_Uninst нуждается в правах администратора. Работа прервана."
 
 #LangString Msg_UAC_Logon_Abort ${LANG_ENGLISH} "Logon service not running, aborting!"
+LangString Msg_UAC_Logon_Abort ${LANG_RUSSIAN} "Служба вторичного входа в систему не работает. Работа прервана."
 
 #LangString Msg_UAC_No_Elevation ${LANG_ENGLISH} "Unable to elevate , error $0"
+LangString Msg_UAC_No_Elevation ${LANG_RUSSIAN} "Не удаётся повысить полномочия, ошибка $0"
 
 #LangString Msg_Error_Remove_InstDir ${LANG_ENGLISH} "The installation directory$\r$\n'$INSTDIR'$\r$\ncould not be removed because it is not empty."
+LangString Msg_Error_Remove_InstDir ${LANG_RUSSIAN} "Установочная папка$\r$\n'$INSTDIR'$\r$\nне моужт быть удалена, потому что она не пустая."
 
 #LangString Msg_Path_Invalid ${LANG_ENGLISH} "The entered path is invalid!$\r$\n$\r$\nPlease check your input."
-
-;added on 2010-10-21
-#LangString Uninstall_Folder_Name ${LANG_ENGLISH} "Uninstall"
+LangString Msg_Path_Invalid ${LANG_RUSSIAN} "Введённый путь некорректен.$\r$\n$\r$\nПроверьте вводимый текст."
 
 ;added on 2011-06-13
 #LangString ^NameDA ${LANG_ENGLISH} "@CPACK_PACKAGE_NAME@ Version @CPACK_PACKAGE_VERSION@"
+LangString ^NameDA ${LANG_RUSSIAN} "@CPACK_PACKAGE_NAME@, версия @CPACK_PACKAGE_VERSION@"
 
 ;added on 2011-07-24
 #LangString License_Message ${LANG_ENGLISH} "OpenCPN is software libre. You are encouraged and legally entitled to copy, reinstall, modify, and redistribute this program for yourself and your friends under the terms of the GPL. $\r$\nSmooth sailing!"
+LangString License_Message ${LANG_RUSSIAN} "OpenCPN является свободным программным обеспечением. Вы можете копировать, устанавливать, изменять и распространять эту программу среди своих друзей на условиях лицензии GPL.$\r$\nПопутного ветра!"
 
 ;Needs to be translated:
 #LangString Installer_Unsupported_XP_SP_Version ${LANG_ENGLISH} "Your Windows XP Service Pack version is not supported (it's too old)!$\r$\nYou need at least Windows XP SP3."
+LangString Installer_Unsupported_XP_SP_Version ${LANG_RUSSIAN} "Ваша версия пакета обновлений Windows XP слишком старая и не поддерживается.$\r$\nТребуется Windows XP с пакетом обновления 3 или более современные системы."
