--- a/buildwin/NSIS_Unicode/Language files/Langstrings_GERMAN.nsh.in
+++ b/buildwin/NSIS_Unicode/Language files/Langstrings_GERMAN.nsh.in
@@ -109,3 +109,16 @@ LangString License_Message ${LANG_GERMAN} "OpenCPN ist Freie Software. Sie werde
 
 #LangString Installer_Unsupported_XP_SP_Version ${LANG_ENGLISH} "Your Windows XP Service Pack version is not supported (it's too old)!$\r$\nYou need at least Windows XP SP3."
 LangString Installer_Unsupported_XP_SP_Version ${LANG_GERMAN} "Deine Windows XP Service Pack Version ist nicht anerkannt. (Sie ist zu alt!)$\r$\nDu brauchst mindestens Windows XP SP3."
+
+#LangString Label_TypeInst_Parallel_Text ${LANG_ENGLISH} "Setup has detected several installed versions of @CPACK_PACKAGE_NAME@ on your system.  On the next screen, you will be asked to choose the desired install location for @CPACK_PACKAGE_NAME@ Version @CPACK_PACKAGE_VERSION@."
+LangString Label_TypeInst_Parallel_Text ${LANG_GERMAN} "Setup hat mehrere installierte Versionen von @CPACK_PACKAGE_NAME@ auf Ihrem System gefunden. On the next screen, you will be asked to choose the desired install location for @CPACK_PACKAGE_NAME@ Version @CPACK_PACKAGE_VERSION@."
+
+#LangString Type_Parallel_Installation ${LANG_ENGLISH} "Parallel installation"
+LangString Type_Parallel_Installation ${LANG_GERMAN} "Parallel-Installation"
+
+#LangString Page_TypeInst_Title ${LANG_ENGLISH} "Previous Installations"
+LangString Page_TypeInst_Title ${LANG_GERMAN} "Vorhandene Installationen"
+
+#LangString Page_TypeInst_Subtitle ${LANG_ENGLISH} "$MULTIPLE_INSTALLS installations of @CPACK_PACKAGE_NAME@ found."
+LangString Page_TypeInst_Subtitle ${LANG_GERMAN} "$MULTIPLE_INSTALLS Installationen von @CPACK_PACKAGE_NAME@ gefunden."
+
