--- a/buildwin/NSIS_Unicode/Language files/Langstrings_SPANISH.nsh.in
+++ b/buildwin/NSIS_Unicode/Language files/Langstrings_SPANISH.nsh.in
@@ -104,3 +104,16 @@ LangString License_Message ${LANG_SPANISH} "OpenCPN es software libre. Tienes to
 
 #LangString Installer_Unsupported_XP_SP_Version ${LANG_ENGLISH} "Your Windows XP Service Pack version is not supported (it's too old)!$\r$\nYou need at least Windows XP SP3."
 LangString Installer_Unsupported_XP_SP_Version ${LANG_SPANISH} "Tu versión de service pack de Windows XP no es admitida (es muy vieja)!$\r$\nNecesitas, como mínimo, Windows XP SP3"
+
+#LangString Label_TypeInst_Parallel_Text ${LANG_ENGLISH} "Setup has detected several installed versions of @CPACK_PACKAGE_NAME@ on your system.  On the next screen, you will be asked to choose the desired install location for @CPACK_PACKAGE_NAME@ Version @CPACK_PACKAGE_VERSION@."
+LangString Label_TypeInst_Parallel_Text ${LANG_SPANISH} "El programa de instalación ha detectado varias versiones de @CPACK_PACKAGE_NAME@ en su sistema. On the next screen, you will be asked to choose the desired install location for @CPACK_PACKAGE_NAME@ Version @CPACK_PACKAGE_VERSION@."
+
+#LangString Type_Parallel_Installation ${LANG_ENGLISH} "Parallel installation"
+LangString Type_Parallel_Installation ${LANG_SPANISH} "Instalación en paralelo"
+
+#LangString Page_TypeInst_Title ${LANG_ENGLISH} "Previous Installations"
+LangString Page_TypeInst_Title ${LANG_SPANISH} "Instalaciones anteriores"
+
+#LangString Page_TypeInst_Subtitle ${LANG_ENGLISH} "$MULTIPLE_INSTALLS installations of @CPACK_PACKAGE_NAME@ found."
+LangString Page_TypeInst_Subtitle ${LANG_FRENCH} "$MULTIPLE_INSTALLS installations d'@CPACK_PACKAGE_NAME@ détectées."
+
